feat: right currency formatting
